Fix contrast when hovering on calendar dates

--- a/assets/application.css
+++ b/assets/application.css
@@ -778,6 +778,9 @@ ol.years > .year {
   inline-size: var(--calendar-day-size);
   justify-content: center;
 }
+.calendar-date a:hover {
+  color: var(--link-active-foreground-color);
+}
 .calendar-date--filler {
   color: var(--calendar-filler-color);
 }
